added formatting googel style

--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -32,5 +32,6 @@
             ]
         }
     ],
-    "emmet.triggerExpansionOnTab": true
+    "emmet.triggerExpansionOnTab": true,
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0}"
 }
